# cmip6-downscaling

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  LICENSE  README.md  datasets.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml
ci/: environment.yaml
cmip6_downscaling/: __init__.py  _version.py  config.py  constants.py  runtimes.py  utils.py
configs/: bcsd_ERA5_AWI-CM-1-1-M_historical_pr_-90_90_-180_180_1981_2010_1940_2014.json  bcsd_ERA5_AWI-CM-1-1-M_historical_tasmax_-90_90_-180_180_1981_2010_1940_2014.json  bcsd_ERA5_AWI-CM-1-1-M_historical_tasmax_-90_90_-180_180_1981_2010_1950_2014.json  bcsd_ERA5_AWI-CM-1-1-M_historical_tasmin_-90_90_-180_180_1981_2010_1950_2014.json  bcsd_ERA5_AWI-CM-1-1-M_ssp245_pr_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_AWI-CM-1-1-M_ssp370_tasmax_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_AWI-CM-1-1-M_ssp370_tasmin_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_AWI-CM-1-1-M_ssp585_pr_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_AWI-CM-1-1-M_ssp585_tasmin_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_BCC-CSM2-MR_historical_pr_-90_90_-180_180_1981_2010_1940_2014.json  bcsd_ERA5_BCC-CSM2-MR_historical_pr_-90_90_-180_180_1981_2010_1950_2014.json  bcsd_ERA5_BCC-CSM2-MR_historical_tasmax_-90_90_-180_180_1981_2010_1940_2014.json  bcsd_ERA5_BCC-CSM2-MR_ssp245_tasmax_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_BCC-CSM2-MR_ssp245_tasmin_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_BCC-CSM2-MR_ssp585_pr_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_BCC-CSM2-MR_ssp585_tasmin_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_MIROC6_historical_pr_-90_90_-180_180_1981_2010_1940_2014.json  bcsd_ERA5_MIROC6_historical_pr_-90_90_-180_180_1981_2010_1950_2014.json  bcsd_ERA5_MIROC6_historical_tasmax_-90_90_-180_180_1981_2010_1940_2014.json  bcsd_ERA5_MIROC6_ssp245_tasmin_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_MIROC6_ssp370_tasmax_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_MIROC6_ssp370_tasmin_-90_90_-180_180_1981_2010_2015_2099.json  bcsd_ERA5_MIROC6_ssp585_tasmax_-90_90_-180_180_1981_2010_2015_2099.json  make_configs.ipynb
docs/: Makefile  api.md  api.rst  conf.py  create-mamba-env.sh  deploy.sh  docs-deploy.sh  downscaling-methods.md  environment.yml  index.rst  input-datasets.md  make-sphinx-json.sh  next.config.js  package-lock.json  package.json  quick-start.md  running-flows.md
flows/: cloud_flow_test.py  cmip6-raw-pyramids.py  cmip6_raw_pyramids.py  cmip6_transfer.py  downscaled_pyramid_weights.py  era5-resample-rechunk.py  gcm_obs_weights.py  gcm_pyramid_weights.py  maca_flow.py  resample_to_yearly_monthly.ipynb  xesmf-weights.py
notebooks/: accessing_data_example.ipynb  analyses.ipynb  ar6_merge.ipynb  (+21 more)
(+1024 files in other folders)
